# arcane

./: .clippy.toml  .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: audit.yml  ci.yml
codegen/: Cargo.toml  README.md
codegen/core/: Cargo.toml  README.md
codegen/core/src/: lib.rs
codegen/core/src/es/: adapter.rs  mod.rs
codegen/core/src/es/event/: mod.rs  transformer.rs  versioned.rs
codegen/core/src/event/: mod.rs  versioned.rs
codegen/impl/: Cargo.toml  README.md
codegen/impl/src/: lib.rs
codegen/impl/src/common/: mod.rs  parsing.rs
codegen/impl/src/es/: event.rs  mod.rs
codegen/impl/src/es/event/: adapter.rs  impl_enum.rs  impl_struct.rs  mod.rs  revised.rs  strategy.rs  transformer.rs  versioned.rs
codegen/impl/src/es/event/impl_enum/: mod.rs  variant.rs
codegen/impl/src/event/: mod.rs  versioned.rs
codegen/shim/: Cargo.toml  README.md
codegen/shim/src/: lib.rs
codegen/src/: lib.rs  unique_events.rs
codegen/src/es/: adapter.rs  event.rs  mod.rs  strategy.rs  transformer.rs
codegen/tests/: event.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  spell.rs
core/src/es/: event.rs  mod.rs
core/src/es/adapter/: mod.rs
core/src/es/adapter/transformer/: mod.rs  strategy.rs
core/src/es/adapter/transformer/strategy/: as_is.rs  custom.rs  initialized.rs  into.rs  mod.rs  skip.rs  split.rs
core/src/es/event/: mod.rs
core/src/es/event/adapter/: mod.rs
core/src/es/event/adapter/transformer/: mod.rs
core/src/es/event/adapter/transformer/strategy/: as_is.rs  custom.rs  into.rs  mod.rs  skip.rs  split.rs
core/src/event/: mod.rs
examples/: adapter.rs  basic.rs  event.rs  event_adapter.rs  events.rs  specialization.rs
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
examples/chat/src/domain/: chat.rs  email.rs  message.rs  mod.rs
examples/chat/src/event/: chat.rs  email.rs  message.rs  mod.rs
examples/chat/src/storage/: chat.rs  email.rs  message.rs  mod.rs
src/: codegen.rs  lib.rs  private.rs
src/cqrs/: aggregate.rs  command.rs  mod.rs
src/es/: aggregate.rs  command.rs  event.rs  mod.rs
src/es/adapter/: mod.rs
src/es/adapter/transformer/: mod.rs  strategy.rs
src/es/event/: mod.rs
src/es/event/adapter/: mod.rs
src/es/event/adapter/transformer/: mod.rs  strategy.rs
src/spell/: hlist.rs  maybe.rs  mod.rs
