[package]
name = "arcane"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Opionated CQRS/ES framework with type magic."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcane-core"
homepage = "https://github.com/arcane-rs/arcane"
repository = "https://github.com/arcane-rs/arcane"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
doc = ["arcane-codegen?/doc"]      # only for generating documentation
derive = ["arcane-codegen", "arcane-core/codegen"]
es = ["arcane-core/es"]            # enables event sourcing machinery
reflect = ["arcane-codegen?/reflect", "arcane-core/reflect"]  # enables compile-time reflection capabilities

[dependencies]
arcane-core = { version = "0.1.0-dev", path = "./core" }
arcane-codegen = { version = "0.1.0-dev", path = "./codegen", optional = true }

[[example]]
name = "event"
required-features = ["derive", "es", "reflect"]

[workspace]
members = ["codegen", "codegen/impl", "codegen/shim", "core"]
