[package]
name = "arcane"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Opionated CQRS/ES framework with type magic."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Mikhail Bashilov <m.bashilov.srg@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcane-core"
homepage = "https://github.com/arcane-rs/arcane"
repository = "https://github.com/arcane-rs/arcane"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enables deriving code generation capabilities.
derive = ["dep:arcane-codegen"]
# Enables event sourcing machinery.
es = ["arcane-codegen?/es", "arcane-core/es"]
# Enables compile-time reflection capabilities.
reflect = ["arcane-codegen?/reflect", "arcane-core/reflect"]
# Enables stored events support.
stored = ["arcane-codegen?/stored", "arcane-core/stored"]

# Only for generating documentation.
doc = ["arcane-codegen?/doc"]

[dependencies]
arcane-core = { version = "0.1.0-dev", path = "./core" }
arcane-codegen = { version = "0.1.0-dev", path = "./codegen", optional = true }

[[example]]
name = "event"
required-features = ["derive", "es", "reflect", "stored"]

[workspace]
members = ["codegen", "codegen/impl", "codegen/shim", "core"]
