[package]
name = "arcana-codegen"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.56"
description = "Code generation for `arcana` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcana-codegen"
homepage = "https://github.com/arcana-rs/arcana/tree/master/codegen"
repository = "https://github.com/arcana-rs/arcana"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
doc = ["arcana-codegen-shim/doc", "arcana-core"] # only for generating documentation

[dependencies]
arcana-codegen-shim = { version = "0.1.0-dev", path = "./shim" }
static_assertions = { version = "1.1", default-features = false }

# `doc` feature
arcana-core = { version = "0.1.0-dev", path = "../core", features = ["es"], optional = true }
