[package]
name = "arcane-codegen"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Code generation for `arcane` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcane-codegen"
homepage = "https://github.com/arcane-rs/arcane/tree/main/codegen"
repository = "https://github.com/arcane-rs/arcane"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
doc = ["arcane-codegen-shim/doc", "dep:arcane-core"] # only for generating documentation

[dependencies]
arcane-codegen-shim = { version = "0.1.0-dev", path = "./shim" }

# `doc` feature
arcane-core = { version = "0.1.0-dev", path = "../core", features = ["es"], optional = true }
