[package]
name = "arcane-codegen"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Code generation for `arcane` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Mikhail Bashilov <m.bashilov.srg@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcane-codegen"
homepage = "https://github.com/arcane-rs/arcane/tree/main/codegen"
repository = "https://github.com/arcane-rs/arcane"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enables generating event sourcing machinery.
es = ["arcane-codegen-shim/es", "arcane-core?/es"]
# Enables generating compile-time reflection capabilities.
reflect = ["arcane-codegen-shim?/reflect"]
# Enables raw events support.
raw = ["arcane-codegen-shim?/raw"]

# Only for generating documentation.
doc = ["dep:arcane-core", "arcane-codegen-shim?/doc"]

[dependencies]
arcane-codegen-shim = { version = "0.1.0-dev", path = "./shim", optional = true }

# `doc` feature dependencies
arcane-core = { version = "0.1.0-dev", path = "../core", optional = true }
