[package]
name = "arcana-core"
version = "0.1.0-dev"
edition = "2018"
resolver = "2"
description = "Core abstractions and implementations of `arcana` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcana-core"
homepage = "https://github.com/arcana-rs/arcana/tree/master/core"
repository = "https://github.com/arcana-rs/arcana"
readme = "README.md"

[features]
codegen = ["sealed"] # only enables codegen glue
es = []

[dependencies]
derive_more = { version = "0.99", features = ["deref", "deref_mut", "display", "into"], default-features = false }
ref-cast = "1.0"
sealed = { version = "0.3", optional = true }

[dev-dependencies]
arcana = { version = "0.1.0-dev", path = "..", features = ["derive", "es"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
