[package]
name = "arcana-core"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.57"
description = "Core abstractions and implementations of `arcana` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcana-core"
homepage = "https://github.com/arcana-rs/arcana/tree/master/core"
repository = "https://github.com/arcana-rs/arcana"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
codegen = [] # only enables codegen glue
es = ["futures", "pin-project"]

[dependencies]
derive_more = { version = "0.99", features = ["deref", "deref_mut", "display", "from", "into"], default-features = false }
futures = { version = "0.3.11", default-features = false, optional = true }
pin-project = { version = "1.0", optional = true }
ref-cast = "1.0"

[dev-dependencies]
arcana = { version = "0.1.0-dev", path = "..", features = ["derive", "es"] }
futures = "0.3"
