[package]
name = "arcana-codegen-core"
version = "0.1.0-dev"
edition = "2018"
resolver = "2"
description = "Core implementations of `arcana-codegen` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>"
]
documentation = "https://docs.rs/arcana-codegen-core"
homepage = "https://github.com/arcana-rs/arcana/tree/master/codegen/core"
repository = "https://github.com/arcana-rs/arcana"
readme = "README.md"

[features]
doc = ["arcana-core", "futures"]  # only for generating documentation

[dependencies]
proc-macro2 = { version = "1.0.4", default-features = false }
quote = { version = "1.0.9", default-features = false }
syn = { version = "1.0.72", features = ["derive", "extra-traits", "parsing", "printing"], default-features = false }
synthez = { version = "0.1.3", default-features = false }

# `doc` feature
arcana-core = { version = "0.1.0-dev", path = "../../core", features = ["es"], optional = true }
futures = { version = "0.3", default-features = false, optional = true  }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
