[package]
name = "arcane-codegen-impl"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Code generation implementation of `arcane-codegen` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcane-codegen-impl"
homepage = "https://github.com/arcane-rs/arcane/tree/main/codegen/impl"
repository = "https://github.com/arcane-rs/arcane"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
doc = ["dep:arcane-core"]          # only for generating documentation
reflect = ["arcane-core?/reflect"] # enables generating compile-time reflection capabilities

[dependencies]
proc-macro2 = { version = "1.0.4", default-features = false }
quote = { version = "1.0.9", default-features = false }
syn = { version = "1.0.72", features = ["derive", "extra-traits", "parsing", "printing"], default-features = false }
synthez = { version = "0.2", default-features = false }

# `doc` feature dependencies
arcane-core = { version = "0.1.0-dev", path = "../../core", features = ["es"], optional = true }
