[package]
name = "arcane-codegen-impl"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Code generation implementation of `arcane-codegen` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Mikhail Bashilov <m.bashilov.srg@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcane-codegen-impl"
homepage = "https://github.com/arcane-rs/arcane/tree/main/codegen/impl"
repository = "https://github.com/arcane-rs/arcane"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enables generating event sourcing machinery.
es = ["dep:proc-macro2", "dep:quote", "dep:syn", "dep:synthez", "arcane-core?/es"]
# Enables generating compile-time reflection capabilities.
reflect = ["arcane-core?/reflect"]

# Only for generating documentation.
doc = ["dep:arcane-core"]

[dependencies]
proc-macro2 = { version = "1.0.4", default-features = false, optional = true }
quote = { version = "1.0.9", default-features = false, optional = true }
syn = { version = "2.0", features = ["derive", "extra-traits", "parsing", "printing"], default-features = false, optional = true }
synthez = { version = "0.3.1", default-features = false, optional = true }

# `doc` feature dependencies
arcane-core = { version = "0.1.0-dev", path = "../../core", optional = true }
