[package]
name = "arcane-codegen-shim"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Internal proc macro shim of `arcane-codegen` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcane-codegen"
homepage = "https://github.com/arcane-rs/arcane/tree/main/codegen/shim"
repository = "https://github.com/arcane-rs/arcane"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[features]
doc = ["arcane-codegen-impl/doc", "dep:arcane-core"] # only for generating documentation

[dependencies]
arcane-codegen-impl = { version = "0.1.0-dev", path = "../impl" }
syn = { version = "1.0.72", features = ["proc-macro"], default-features = false }

# `doc` feature
arcane-core = { version = "0.1.0-dev", path = "../../core", features = ["es"], optional = true }

[dev-dependencies]
arcane = { path = "../..", features = ["derive", "es"] }
