[package]
name = "arcane-codegen-shim"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Internal proc macro shim of `arcane-codegen` crate."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Mikhail Bashilov <m.bashilov.srg@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/arcane-codegen"
homepage = "https://github.com/arcane-rs/arcane/tree/main/codegen/shim"
repository = "https://github.com/arcane-rs/arcane"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[features]
# Enables generating event sourcing machinery.
es = ["dep:syn", "arcane-codegen-impl/es", "arcane-core?/es"]
# Enables generating compile-time reflection capabilities.
reflect = ["arcane-codegen-impl?/reflect"]

# Only for generating documentation.
doc = ["dep:arcane-core", "arcane-codegen-impl?/doc"]

[dependencies]
arcane-codegen-impl = { version = "0.1.0-dev", path = "../impl", optional = true }
syn = { version = "2.0", features = ["proc-macro"], default-features = false, optional = true }

# `doc` feature dependencies
arcane-core = { version = "0.1.0-dev", path = "../../core", optional = true }

[dev-dependencies]
arcane = { path = "../..", features = ["derive", "es", "reflect"] }
