[package]
name = "arcana-chat-example"
version = "0.1.0-dev"
edition = "2018"
resolver = "2"
description = "Simple chat app using arcana framework."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
publish = false

[dependencies]
arcana = { version = "0.1.0-dev", path = "../..", features = ["derive", "es"] }
derive_more = "0.99"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
