[package]
name = "arcana-example-chat"
version = "0.0.0"
edition = "2018"
resolver = "2"
description = "Simple chat app using arcana framework."
authors = [
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
publish = false

[dependencies]
arcana = { version = "0.1.0-dev", path = "../..", features = ["derive", "es"] }
derive_more = "0.99"
either = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
